[package]
name = "interactive-parse"
version = "0.1.0"
edition = "2021"
authors = ["Eric Woolsey<ewoolsey@ualberta.ca>"]
license = "MIT"
description = "A work in progress interactive parser for JsonSchema types."
repository = "https://github.com/ewoolsey/interactive-parse"
keywords = ["JsonSchema", "Schemars", "json", "serde", "parser", "interactive", "cli", "shell"]
readme = "README.md"

[lib]

[dependencies]
schemars = "0.8"
serde_json = "1"
serde = { version = "1", default-features = false }
thiserror = "1"
inquire = "0.5"