[package]
name = "interactive-parse"
version = "0.1.5"
edition = "2021"
authors = ["Eric Woolsey<ewoolsey@ualberta.ca>"]
license = "MIT"
description = "An interactive parser for JsonSchema types."
repository = "https://github.com/ewoolsey/interactive-parse"
keywords = ["JsonSchema", "Schemars", "json", "parser", "interactive"]
readme = "README.md"

[lib]

[dependencies]
lazy_static = "1"
schemars = "0.8"
serde_json = "1"
serde = { version = "1", default-features = false }
thiserror = "1"
inquire = "0.7"
crossterm = "0.28"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"

